added new swagger endpoints for rrd
