# pkg/swagger/server/restapi/operations/get_rrds_id.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetRrdsIDHandlerFunc turns a function with the right signature into a get rrds ID handler
+type GetRrdsIDHandlerFunc func(GetRrdsIDParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetRrdsIDHandlerFunc) Handle(params GetRrdsIDParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetRrdsIDHandler interface for that can handle valid get rrds ID params
+type GetRrdsIDHandler interface {
+	Handle(GetRrdsIDParams) middleware.Responder
+}
+
+// NewGetRrdsID creates a new http.Handler for the get rrds ID operation
+func NewGetRrdsID(ctx *middleware.Context, handler GetRrdsIDHandler) *GetRrdsID {
+	return &GetRrdsID{Context: ctx, Handler: handler}
+}
+
+/*
+	GetRrdsID swagger:route GET /rrds/{id} getRrdsId
+
+get filer resource for an existing research-related data storage.
+*/
+type GetRrdsID struct {
+	Context *middleware.Context
+	Handler GetRrdsIDHandler
+}
+
+func (o *GetRrdsID) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetRrdsIDParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
