# pkg/swagger/server/restapi/operations/get_rrds_responses.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/dccn-tg/filer-gateway/pkg/swagger/server/models"
+)
+
+// GetRrdsOKCode is the HTTP code returned for type GetRrdsOK
+const GetRrdsOKCode int = 200
+
+/*
+GetRrdsOK success
+
+swagger:response getRrdsOK
+*/
+type GetRrdsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResponseBodyRrds `json:"body,omitempty"`
+}
+
+// NewGetRrdsOK creates GetRrdsOK with default headers values
+func NewGetRrdsOK() *GetRrdsOK {
+
+	return &GetRrdsOK{}
+}
+
+// WithPayload adds the payload to the get rrds o k response
+func (o *GetRrdsOK) WithPayload(payload *models.ResponseBodyRrds) *GetRrdsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rrds o k response
+func (o *GetRrdsOK) SetPayload(payload *models.ResponseBodyRrds) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRrdsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetRrdsInternalServerErrorCode is the HTTP code returned for type GetRrdsInternalServerError
+const GetRrdsInternalServerErrorCode int = 500
+
+/*
+GetRrdsInternalServerError failure
+
+swagger:response getRrdsInternalServerError
+*/
+type GetRrdsInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ResponseBody500 `json:"body,omitempty"`
+}
+
+// NewGetRrdsInternalServerError creates GetRrdsInternalServerError with default headers values
+func NewGetRrdsInternalServerError() *GetRrdsInternalServerError {
+
+	return &GetRrdsInternalServerError{}
+}
+
+// WithPayload adds the payload to the get rrds internal server error response
+func (o *GetRrdsInternalServerError) WithPayload(payload *models.ResponseBody500) *GetRrdsInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get rrds internal server error response
+func (o *GetRrdsInternalServerError) SetPayload(payload *models.ResponseBody500) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetRrdsInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
