# pkg/swagger/server/restapi/operations/post_rrds.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+
+	"github.com/dccn-tg/filer-gateway/pkg/swagger/server/models"
+)
+
+// PostRrdsHandlerFunc turns a function with the right signature into a post rrds handler
+type PostRrdsHandlerFunc func(PostRrdsParams, *models.Principle) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn PostRrdsHandlerFunc) Handle(params PostRrdsParams, principal *models.Principle) middleware.Responder {
+	return fn(params, principal)
+}
+
+// PostRrdsHandler interface for that can handle valid post rrds params
+type PostRrdsHandler interface {
+	Handle(PostRrdsParams, *models.Principle) middleware.Responder
+}
+
+// NewPostRrds creates a new http.Handler for the post rrds operation
+func NewPostRrds(ctx *middleware.Context, handler PostRrdsHandler) *PostRrds {
+	return &PostRrds{Context: ctx, Handler: handler}
+}
+
+/*
+	PostRrds swagger:route POST /rrds postRrds
+
+provision filer resource for a new research-related data storage.
+*/
+type PostRrds struct {
+	Context *middleware.Context
+	Handler PostRrdsHandler
+}
+
+func (o *PostRrds) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewPostRrdsParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principle
+	if uprinc != nil {
+		principal = uprinc.(*models.Principle) // this is really a models.Principle, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
